# skyvern-lite

./: README.md  pyproject.toml
src/skyvern_client/: __init__.py  _http.py  client.py  exceptions.py  models.py  sessions.py
src/skyvern_client/core/: client_wrapper.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_http.py  test_models.py  test_sessions.py
