[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyvern-lite"
version = "0.1.0"
description = "Lightweight Skyvern API client for cloud browser CDP sessions"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.2,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skyvern_client"]
