[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyvern-lite"
version = "0.1.1"
description = "Lightweight Skyvern API client for cloud browser CDP sessions. Import: from skyvern_client import Skyvern"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.2,<3",
]

[project.urls]
Homepage = "https://github.com/QLYYLQ/skyvern-lite"
Repository = "https://github.com/QLYYLQ/skyvern-lite"

[tool.hatch.build.targets.wheel]
packages = ["src/skyvern_client"]
