[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyvern-lite"
version = "1.0.2"
description = "Minimal cloud browser SDK for Skyvern — session lifecycle management via CDP."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/QLYYLQ/skyvern-lite"
Repository = "https://github.com/QLYYLQ/skyvern-lite"

[tool.hatch.build.targets.wheel]
packages = ["src/skyvern_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
